update image path in notebook

--- a/lung_disease_detection/notebooks/lung_disease_detection_workflow_solution.ipynb
+++ b/lung_disease_detection/notebooks/lung_disease_detection_workflow_solution.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "2a0ad9b9-e025-4864-a13f-142a495b2e23",
    "metadata": {},
    "outputs": [],
@@ -85,10 +85,7 @@
     "tags": []
    },
    "source": [
-    "## Load Data\n",
-    "The dataset will be a set of chest X-ray images that have been divided into two different folders named negative (for non-Hernia images) and positive (Hernia images). There is a dataset.csv file that stores the image paths with their corresponding labels. \n",
-    "\n",
-    "In this exercise, we will be using Hernia_sample50 that contains 50 negative sample images and 50 positive sample images."
+    "## Load Data"
    ]
   },
   {
@@ -101,10 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "640afd05-cc82-4c8b-8c96-538eb6b39e70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data saved to ../data/raw\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -124,6 +129,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73deeb46-01ae-4106-896a-0409d480b23e",
+   "metadata": {},
+   "source": [
+    "The dataset will be a set of chest X-ray images that have been divided into two different folders named negative (for non-Hernia images) and positive (Hernia images). There is a dataset.csv file that stores the image paths with their corresponding labels. \n",
+    "\n",
+    "In this exercise, we will be using Hernia_sample50 that contains 50 negative sample images and 50 positive sample images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1eefa09",
    "metadata": {
     "tags": []
@@ -134,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "03e013aa-8bb8-49f3-b17f-ff260e71026f",
    "metadata": {},
    "outputs": [],
@@ -146,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "221ef4ab",
    "metadata": {},
    "outputs": [
@@ -253,7 +268,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "351b30e2",
    "metadata": {},
    "outputs": [],
@@ -290,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "39fb3ed2",
    "metadata": {},
    "outputs": [
@@ -397,7 +412,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "id": "9febe3e3",
    "metadata": {},
    "outputs": [],
@@ -451,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "68fdb402-ff2f-4efb-af3c-138890326e9b",
    "metadata": {},
    "outputs": [],
@@ -461,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "d52437ee-aaeb-4ff7-9768-87f35eacde85",
    "metadata": {},
    "outputs": [
@@ -487,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "ff401137-0389-465f-b54f-1aff1fdb0e70",
    "metadata": {},
    "outputs": [
@@ -499,7 +514,7 @@
        "Name: labels, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "id": "002e53b2-9d37-44b6-b7fb-5a6d5cf42e29",
    "metadata": {
     "tags": []
@@ -612,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "id": "676a0b0b-a60e-4047-8bbc-48e186748b21",
    "metadata": {},
    "outputs": [],
@@ -634,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "bd0389a6-ab1f-4ba5-bc32-d929800351db",
    "metadata": {},
    "outputs": [
@@ -675,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "id": "431330e6-2c88-4e32-85c3-26407549f36e",
    "metadata": {},
    "outputs": [],
@@ -849,7 +864,7 @@
     "\n",
     "This model formulated based on a combination of the Inception structure and the Residual connection. In the Inception-Resnet block, multiple sized convolutional filters are combined with residual connections. The usage of residual connections not only avoids the degradation problem caused by deep structures but also reduces the training time.\n",
     "\n",
-    "<img src='https://1.bp.blogspot.com/-O7AznVGY9js/V8cV_wKKsMI/AAAAAAAABKQ/maO7n2w3dT4Pkcmk7wgGqiSX5FUW2sfZgCLcB/s1600/image00.png' width=\"600\"></br>\n",
+    "<img src='../images/inceptionresnet.png' width=\"600\"></br>\n",
     "\n",
     "Source code: https://github.com/keras-team/keras/blob/v2.10.0/keras/applications/inception_resnet_v2.py#L43-L273"
    ]
@@ -874,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "a2100d65-63bf-4df2-a222-442c4d7a911c",
    "metadata": {
     "scrolled": true,
@@ -5094,7 +5109,7 @@
     "It is also known as an error matrix which is a specific table layout that allows visualization of how many samples from each label got predicted correctly, typically for supervised learning. \n",
     "The beauty of the confusion matrix is that it actually allows us to see where the model fails and where the model succeeds, especially when the labels are imbalanced. In other words, we are able to see beyond the model's accuracy.\n",
     "\n",
-    "<img src='https://www.nbshare.io/static/snapshots/cm_colored_1-min.png' width=\"500\"></br>\n",
+    "<img src='../images/confusion_matrix.png' width=\"500\"></br>\n",
     "\n",
     "Note that some people use predicted values on the rows, and actual values on the columns, which is just the transpose of this matrix. Some people start by the negative class first then the positive class. These are just different ways of drawing the confusion matrix, and all convey the same thing.\n",
     "\n",
@@ -5566,7 +5581,7 @@
     "\n",
     "The ROC curve is plotted with TPR against the FPR where TPR is on the y-axis and FPR is on the x-axis.\n",
     "\n",
-    "<img src='https://miro.medium.com/max/361/1*pk05QGzoWhCgRiiFbz-oKQ.png'></br>"
+    "<img src='../images/auc.png'></br>"
    ]
   },
   {
@@ -5643,41 +5658,6 @@
     "        }\n",
     "\n",
     "    json.dump(scores, f, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e1afbb29-cc99-4cf0-9505-07268c3a64e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data saved to ../data/raw\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "import urllib.request\n",
-    "import tarfile\n",
-    "\n",
-    "\n",
-    "\n",
-    "data_dir = '../data/raw'\n",
-    "dataset_url=\"https://github.com/ZoieD/Hernia_X-ray_images_sample/raw/main/Hernia_sample50.tgz\"\n",
-    "Path(data_dir).mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "\n",
-    "\n",
-    "thetarfile = dataset_url\n",
-    "ftpstream = urllib.request.urlopen(thetarfile)\n",
-    "thetarfile = tarfile.open(fileobj=ftpstream, mode=\"r|gz\")\n",
-    "thetarfile.extractall(data_dir)\n",
-    "print(f'data saved to {data_dir}')"
    ]
   },
   {
