--- a/flower_classification/notebooks/flower_classification_pipeline.ipynb
+++ b/flower_classification/notebooks/flower_classification_pipeline.ipynb
@@ -170,7 +170,7 @@
    "id": "bd770221-869f-40d1-8ea5-988c8d752b5d",
    "metadata": {},
    "source": [
-    "Import Kubeflow SDK"
+    "##### Import Kubeflow SDK"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "id": "3cb412ed-799f-44dc-ad4b-eb2ea2faec14",
    "metadata": {},
    "source": [
-    "Define a fucntion to converts a Python function to a component and returns a task."
+    "Define a fucntion to converts a Python function to a component and returns a task using `kfp.components.func_to_container_op()`"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "id": "3fd2c1ad-7506-4c6f-9d0f-8d2e25a9cbe2",
    "metadata": {},
    "source": [
-    "#### Component 1: Create standalone python function - load_task()"
+    "##### Component 1: Create standalone python function - load_task()"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "id": "c05447f8-9d6a-4916-afcd-ff755564f496",
    "metadata": {},
    "source": [
-    "#### Component 2: Create standalone python function - train_task()\n",
+    "##### Component 2: Create standalone python function - train_task()\n",
     "For both the training and evaluation, divide the integer-valued pixel values by 255 to scale all values into the [0, 1] (floating-point) range. This function must be copied into both component functions (cf. normalize_image)."
    ]
   },
@@ -362,7 +362,7 @@
    "id": "923623e3-a145-42a3-9794-89bdbd08e121",
    "metadata": {},
    "source": [
-    "#### Component 3: Create standalone python function - evaluate_task()\n",
+    "##### Component 3: Create standalone python function - evaluate_task()\n",
     "Evaluate the model with the following Python function. The metrics metadata (loss and accuracy) is available to the Kubeflow Pipelines UI. All metadata can automatically be visualized with output viewer(s)."
    ]
   },
@@ -467,7 +467,7 @@
     "tags": []
    },
    "source": [
-    "#### 3.1 Build Kubeflow Pipeline"
+    "##### Build Kubeflow Pipeline"
    ]
   },
   {
@@ -503,9 +503,7 @@
     "    dataset_url='https://storage.googleapis.com/download.tensorflow.org/example_images/flower_photos.tgz',\n",
     "    batch_size=32,\n",
     "    epochs=3,\n",
-    "    action='create',\n",
-    "    namespace=utils.get_default_target_namespace(),\n",
-    "    framework='tensorflow',         \n",
+    "    namespace=utils.get_default_target_namespace(),        \n",
     "):\n",
     "    downloadOp = load_task(dataset_url)\n",
     "\n",
@@ -523,7 +521,7 @@
    "id": "b4ec10e4-043f-4fd5-bb89-59640272e819",
    "metadata": {},
    "source": [
-    "#### 3.2 Run pipeline"
+    "##### Run pipeline"
    ]
   },
   {
