update lung disease detection notebooks

--- a/lung_disease_detection/notebooks/lung_disease_detection_workflow.ipynb
+++ b/lung_disease_detection/notebooks/lung_disease_detection_workflow.ipynb
@@ -26,7 +26,7 @@
     "- Preprocess and augment data using ImageDataGenerator.\n",
     "- Adapt a pretrained model to our dataset and train a classifier using InceptionResNetV2.\n",
     "- Evaluate a model with metrics and understand the performance of a model.\n",
-    "- Issue that we might encounter and improvement to be made."
+    "- Understand issue that we might encounter and improvement to be made."
    ]
   },
   {
@@ -444,6 +444,7 @@
     "\n",
     "# Create the new directory by using os.makedirs(<directory>, exist_ok=True)\n",
     "\n",
+    "\n",
     "# Define the file path to store the dataset with os.path.join(<directory>, <filename>)\n",
     "# processed_data_path = \n",
     "\n",
@@ -523,7 +524,7 @@
    "id": "5dc32511",
    "metadata": {},
    "source": [
-    "**To verify that the image paths from the data frame that we have changed are correct and to visual our sample images, let's plot first 5 images for each label the data frame.**"
+    "**Let's plot the first 5 images for each label at the data frame.**"
    ]
   },
   {
@@ -604,7 +605,7 @@
    "metadata": {},
    "source": [
     "### Split Data\n",
-    "The data is to be splitted for model training and testing. We have to note that a learning model fits a training set well, that does not mean it is a good model. It could be overfitting the train set and as a result predictions on the test set would be poor. The error of your model as measured on the data set with which you trained the parameters will be lower than the error on any other data set. </br>\n",
+    "The data is to be splitted for model training and testing. We have to note that a learning model fits a training set well, that does not mean it is a good model. It could be overfitting the train set and as a result predictions on the test set would be poor. The error of your model as measured on train set will be lower than the error on any other data set.\n",
     "\n",
     "Therefore, we usually break down our dataset into the three sets:\n",
     "- Train set - use to train the model. (60%)\n",
@@ -627,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Divide df into 80% for train_val_df and 20% for test_df by using train_test_split(<data_frame>, test_size= ,random_state=123 , stratify= )\n",
+    "# Divide df into 80% for train_val_df and 20% for test_df by using train_test_split(<data_frame>, test_size= ,random_state=123 , stratify=df['labels'])\n",
     "# train_val_df, test_df =\n",
     "\n",
     "# Divide train_val_df into 80% for train_df and 20% for val_df. \n",
@@ -677,17 +678,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 6,
    "id": "431330e6-2c88-4e32-85c3-26407549f36e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize a generator by using ImageDataGenerator(rescale=1./255., rotation_range=20, width_shift_range=0.2, height_shift_range=0.2, \n",
-    "# shear_range=0.3, zoom_range=0.3, horizontal_flip=True, vertical_flip=False, fill_mode=\"nearest\")\n",
-    "# train_datagen = \n",
+    "train_datagen = ImageDataGenerator(rescale=1./255.,\n",
+    "                                    rotation_range=20, \n",
+    "                                    width_shift_range=0.2, \n",
+    "                                    height_shift_range=0.2, \n",
+    "                                    shear_range=0.3,\n",
+    "                                    zoom_range=0.3,\n",
+    "                                    horizontal_flip=True, \n",
+    "                                    vertical_flip=False,\n",
+    "                                    fill_mode=\"nearest\")\n",
     "\n",
-    "# Initialize a generator by using ImageDataGenerator(rescale=1./255.)\n",
-    "# val_test_datagen = \n"
+    "val_test_datagen = ImageDataGenerator(rescale=1./255.)"
    ]
   },
   {
@@ -760,12 +766,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 7,
    "id": "e4be9545-c4c8-4c3e-a36c-d621e436cba3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get class indices from train_generator by using class_indices()\n",
+    "# Get class indices from train_generator by using `class_indices`\n",
     "# indices = \n"
    ]
   },
