--- a/lung_disease_detection/notebooks/lung_disease_detection_workflow_solution.ipynb
+++ b/lung_disease_detection/notebooks/lung_disease_detection_workflow_solution.ipynb
@@ -26,7 +26,7 @@
     "- Preprocess and augment data using ImageDataGenerator.\n",
     "- Adapt a pretrained model to our dataset and train a classifier using InceptionResNetV2.\n",
     "- Evaluate a model with metrics and understand the performance of a model.\n",
-    "- Issue that we might encounter and improvement to be made."
+    "- Understand issue that we might encounter and improvement to be made."
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "2a0ad9b9-e025-4864-a13f-142a495b2e23",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "640afd05-cc82-4c8b-8c96-538eb6b39e70",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "03e013aa-8bb8-49f3-b17f-ff260e71026f",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "221ef4ab",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "351b30e2",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "39fb3ed2",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "9febe3e3",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "68fdb402-ff2f-4efb-af3c-138890326e9b",
    "metadata": {},
    "outputs": [],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "d52437ee-aaeb-4ff7-9768-87f35eacde85",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "ff401137-0389-465f-b54f-1aff1fdb0e70",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "Name: labels, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
    "id": "5dc32511",
    "metadata": {},
    "source": [
-    "**To verify that the image paths from the data frame that we have changed are correct and to visual our sample images, let's plot first 5 images for each label the data frame.**"
+    "**Let's plot the first 5 images for each label at the data frame.**"
    ]
   },
   {
@@ -609,7 +609,7 @@
    "metadata": {},
    "source": [
     "### Split Data\n",
-    "The data is to be splitted for model training and testing. We have to note that a learning model fits a training set well, that does not mean it is a good model. It could be overfitting the train set and as a result predictions on the test set would be poor. The error of your model as measured on the data set with which you trained the parameters will be lower than the error on any other data set. </br>\n",
+    "The data is to be splitted for model training and testing. We have to note that a learning model fits a training set well, that does not mean it is a good model. It could be overfitting the train set and as a result predictions on the test set would be poor. The error of your model as measured on train set will be lower than the error on any other data set.\n",
     "\n",
     "Therefore, we usually break down our dataset into the three sets:\n",
     "- Train set - use to train the model. (60%)\n",
