--- a/flower_classification/notebooks/flower_classification_pipeline-solution.ipynb
+++ b/flower_classification/notebooks/flower_classification_pipeline-solution.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "309b23c3-b389-44b7-93de-abe4cf50575d",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "58e7d82d-f5bb-4ab0-bf1c-f39b635aef60",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "70d0ce38-0dec-4ecb-b8c4-a14e2676219c",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "b3383c24-9d9f-40d5-950b-14c25b713261",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "b00602fe-3cd1-43c7-971d-5c792225c3ae",
    "metadata": {},
    "outputs": [],
@@ -378,9 +378,7 @@
     "    data_dir: InputPath(str),\n",
     "    model_dir: InputPath(str),\n",
     "    batch_size: int,\n",
-    "    metrics_path: OutputPath(str)\n",
-    ") -> NamedTuple(\"EvaluationOutput\", [(\"mlpipeline_metrics\", \"Metrics\")]\n",
-    "    ):\n",
+    "    mlpipeline_metrics_path: OutputPath('Metrics')):\n",
     "    \"\"\"Loads a saved model from file and uses a pre-downloaded dataset for evaluation.\n",
     "    Model metrics are persisted to `/mlpipeline-metrics.json` for Kubeflow Pipelines\n",
     "    metadata.\"\"\"\n",
@@ -414,18 +412,21 @@
     "    reloaded.summary()\n",
     "    eval_results = reloaded.evaluate(test_ds)\n",
     "    print('Test loss & accuracy: %s' % (eval_results,))\n",
+    "    \n",
     "    # save results to json\n",
-    "    metrics_dict = {}\n",
+    "    metrics = []\n",
     "    for metric, value in zip(reloaded.metrics_names, eval_results):\n",
-    "        print(metric + ': {:.4f}'.format(value))\n",
-    "        metrics_dict.update({f'{metric}': value})\n",
-    "    \n",
-    "    with open(metrics_path, 'w') as f:\n",
-    "        json.dump(metrics_dict, f)\n",
-    "    \n",
-    "    out_tuple = namedtuple(\"EvaluationOutput\", [\"mlpipeline_metrics\"])\n",
+    "        metrics.append({\n",
+    "            'name': metric,\n",
+    "            'numberValue': round(value, 4),\n",
+    "            'format': \"PERCENTAGE\"\n",
+    "        })\n",
+    "        \n",
+    "    metrics_dict = {'metrics': metrics}\n",
+    "    metrics_dict\n",
     "\n",
-    "    return out_tuple(json.dumps(metrics_dict))"
+    "    with open(mlpipeline_metrics_path, 'w') as f:\n",
+    "        json.dump(metrics_dict, f)"
    ]
   },
   {
@@ -490,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "9655cef9-2bdb-48a8-8c37-8b34f9facf5a",
    "metadata": {},
    "outputs": [],
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "2821fb25-2a95-4fc3-98b9-c8e05d18c6ba",
    "metadata": {},
    "outputs": [
@@ -550,8 +551,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:root:Failed to read a token from file '/var/run/secrets/kubeflow/pipelines/token' ([Errno 2] No such file or directory: '/var/run/secrets/kubeflow/pipelines/token').\n",
-      "WARNING:root:Failed to set up default credentials. Proceeding without credentials...\n"
+      "[E 220920 13:00:01 _satvolumecredentials:51] Failed to read a token from file '/var/run/secrets/kubeflow/pipelines/token' ([Errno 2] No such file or directory: '/var/run/secrets/kubeflow/pipelines/token').\n",
+      "[W 220920 13:00:01 _client:372] Failed to set up default credentials. Proceeding without credentials...\n"
      ]
     }
    ],
@@ -569,14 +570,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "d1ae0630-52ce-4b95-815f-b64b9785917c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/kfp/components/_data_passing.py:227: UserWarning: Missing type name was inferred as \"Integer\" based on the value \"32\".\n",
+      "  warnings.warn(\n",
+      "/opt/conda/lib/python3.8/site-packages/kfp/components/_data_passing.py:227: UserWarning: Missing type name was inferred as \"Integer\" based on the value \"3\".\n",
+      "  warnings.warn(\n",
+      "[I 220920 13:00:02 _client:457] Creating experiment flower_classifier_pipelinestudent-02student-02.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<a href=\"/pipeline/#/experiments/details/8cba13bc-d133-42eb-9a36-936a2bd8d312\" target=\"_blank\" >Experiment details</a>."
+       "<a href=\"/pipeline/#/experiments/details/5ae5c314-e34f-4848-8ae9-5e7ac564bc87\" target=\"_blank\" >Experiment details</a>."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -588,7 +600,7 @@
     {
      "data": {
       "text/html": [
-       "<a href=\"/pipeline/#/runs/details/881bfb7c-42b8-4b90-b8aa-4f0d5fbee2b0\" target=\"_blank\" >Run details</a>."
+       "<a href=\"/pipeline/#/runs/details/25530591-88dc-4b30-ad3f-728295a4a36f\" target=\"_blank\" >Run details</a>."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -601,10 +613,11 @@
    "source": [
     "kfp.compiler.Compiler().compile(flower_classifier_pipeline, 'tf_flower_classifier_pipeline.yaml')\n",
     "pipeline_func=flower_classifier_pipeline\n",
-    "experiment_name = 'flower_classifier_pipeline'\n",
-    "run_name = pipeline_func.__name__ + ' run'\n",
+    "namespace = utils.get_default_target_namespace()\n",
+    "experiment_name = 'flower_classifier_pipeline'+ \"_\"+ namespace\n",
+    "run_name = pipeline_func.__name__ + ' run' \n",
     "run_result = client.create_run_from_pipeline_func(pipeline_func, \n",
-    "                                              experiment_name=experiment_name, \n",
+    "                                              experiment_name=experiment_name + namespace, \n",
     "                                              run_name=run_name + '-' + time.strftime(\"%Y%m%d-%H%M%S\"), \n",
     "                                              arguments={})"
    ]
