update assignment for lung disease detection

--- a/lung_disease_detection/notebooks/Assignment.ipynb
+++ b/lung_disease_detection/notebooks/Assignment.ipynb
@@ -167,8 +167,8 @@
    "source": [
     "@func_to_container_op\n",
     "def xxx_task(\n",
-    "    # dataset_url: str,\n",
-    "    # data_dir: OutputPath(str)\n",
+    "\n",
+    "    \n",
     "):\n",
     "    \"\"\"Download Hernia X-ray image data\"\"\"\n",
     "    # import libraries\n",
@@ -199,12 +199,9 @@
    "source": [
     "@func_to_container_op\n",
     "def xxx_task(\n",
-    "    # data_dir: InputPath(str),\n",
-    "    # batch_size: int,\n",
-    "    # dropout_rate: float,\n",
-    "    # learning_rate: float,\n",
-    "    # epochs: int,\n",
-    "    # model_dir: OutputPath(str)\n",
+    "\n",
+    "    \n",
+    "    \n",
     "):\n",
     "    # import libraries\n",
     "\n",
@@ -269,11 +266,10 @@
    "source": [
     "@func_to_container_op\n",
     "def xxx_task(\n",
-    "    # data_dir: InputPath(str),\n",
-    "    # model_dir: InputPath(str),\n",
-    "    # metrics_path: OutputPath(str)\n",
-    ") -> NamedTuple(\"EvaluationOutput\", [(\"mlpipeline_metrics\", \"Metrics\")]\n",
-    "    ):\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "):\n",
     "    \"\"\"Loads a saved model from file and uses a pre-downloaded dataset for evaluation.\n",
     "    Model metrics are persisted to `/mlpipeline-metrics.json` for Kubeflow Pipelines\n",
     "    metadata.\"\"\"\n",
@@ -296,16 +292,31 @@
     "    \n",
     "        \n",
     "    # save results to json\n",
-    "    metrics_dict = {}\n",
-    "    # metrics_dict[\"f1\"] = round(f1, 3)\n",
-    "    # metrics_dict[\"accuracy\"] = round(acc, 3)\n",
+    "    metrics = []\n",
+    "    metrics.append({\n",
+    "            'f1': round(f1, 4),\n",
+    "            'accuracy': round(acc, 4)\n",
+    "        })\n",
     "    \n",
-    "    with open(metrics_path, 'w') as f:\n",
-    "        json.dump(metrics_dict, f)\n",
-    "    \n",
-    "    out_tuple = namedtuple(\"EvaluationOutput\", [\"mlpipeline_metrics\"])\n",
+    "    metrics = []\n",
+    "    f1_dict = {\n",
+    "        'name': 'f1',\n",
+    "        'numberValue': round(f1, 4),\n",
+    "        'format': \"PERCENTAGE\"\n",
+    "    }\n",
+    "    acc_dict = {\n",
+    "        'name': 'accuracy',\n",
+    "        'numberValue': round(acc, 4),\n",
+    "        'format': \"PERCENTAGE\"\n",
+    "    }\n",
+    "    metrics.append(f1_dict)\n",
+    "    metrics.append(acc_dict)\n",
+    "        \n",
+    "    metrics_dict = {'metrics': metrics}\n",
+    "    print(metrics_dict)\n",
     "\n",
-    "    return out_tuple(json.dumps(metrics_dict))"
+    "    # with open(mlpipeline_metrics_path, 'w') as f:\n",
+    "    #     json.dump(metrics_dict, f)"
    ]
   },
   {
