--- a/flower_classification/notebooks/flower_classification_pipeline-solution.ipynb
+++ b/flower_classification/notebooks/flower_classification_pipeline-solution.ipynb
@@ -423,7 +423,7 @@
     "        })\n",
     "        \n",
     "    metrics_dict = {'metrics': metrics}\n",
-    "    metrics_dict\n",
+    "    print(metrics_dict)\n",
     "\n",
     "    with open(mlpipeline_metrics_path, 'w') as f:\n",
     "        json.dump(metrics_dict, f)"
@@ -514,7 +514,7 @@
     "\n",
     "    evaluateOp = evaluate_task(downloadOp.output, trainOp.output, batch_size)\n",
     "    # evaluateOp.after(trainOp)\n",
-    "    # evaluateOp.container.set_gpu_limit(1)\n"
+    "    # evaluateOp.container.set_gpu_limit(1)"
    ]
   },
   {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d1ae0630-52ce-4b95-815f-b64b9785917c",
    "metadata": {},
    "outputs": [
@@ -578,17 +578,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.8/site-packages/kfp/components/_data_passing.py:227: UserWarning: Missing type name was inferred as \"Integer\" based on the value \"32\".\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.8/site-packages/kfp/components/_data_passing.py:227: UserWarning: Missing type name was inferred as \"Integer\" based on the value \"3\".\n",
-      "  warnings.warn(\n",
-      "[I 220920 13:00:02 _client:457] Creating experiment flower_classifier_pipelinestudent-02student-02.\n"
+      "[I 220920 13:02:53 _client:457] Creating experiment flower_classifier_pipeline_student-02.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<a href=\"/pipeline/#/experiments/details/5ae5c314-e34f-4848-8ae9-5e7ac564bc87\" target=\"_blank\" >Experiment details</a>."
+       "<a href=\"/pipeline/#/experiments/details/b994e8fc-9b7b-4dd1-9406-f109fa1364b5\" target=\"_blank\" >Experiment details</a>."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -600,7 +596,7 @@
     {
      "data": {
       "text/html": [
-       "<a href=\"/pipeline/#/runs/details/25530591-88dc-4b30-ad3f-728295a4a36f\" target=\"_blank\" >Run details</a>."
+       "<a href=\"/pipeline/#/runs/details/01385260-a7a5-42f3-8211-69b18c3e78eb\" target=\"_blank\" >Run details</a>."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -617,7 +613,7 @@
     "experiment_name = 'flower_classifier_pipeline'+ \"_\"+ namespace\n",
     "run_name = pipeline_func.__name__ + ' run' \n",
     "run_result = client.create_run_from_pipeline_func(pipeline_func, \n",
-    "                                              experiment_name=experiment_name + namespace, \n",
+    "                                              experiment_name=experiment_name, \n",
     "                                              run_name=run_name + '-' + time.strftime(\"%Y%m%d-%H%M%S\"), \n",
     "                                              arguments={})"
    ]
